syntax = "proto3";

package user;

option go_package = "/user";

service UserService {
  rpc CreateUser(User) returns (User);
  rpc GetUser(GetUserRequest) returns (User);
  rpc GetAllUsers(GetAllRequest) returns (GetAllResponse);
  rpc DeleteUser(GetUserRequest) returns (User);
  rpc UpdateUser(User) returns (User);
  rpc CheckUniqueness(CheckUniquenessRequest) returns (CheckUniquenessResponse);
  rpc Sign(UserDetail) returns (ResponseMessage);
  rpc Verification(VerificationUserRequest) returns (User);
  rpc Login(LoginRequest) returns (User);
}

message GetUserRequest {
  string user_id = 1;
}
message ResponseMessage {
    string Content = 1;
}

message LoginRequest {
    string Email = 1;
    string Password = 2;
}

message VerificationUserRequest {
    string Email = 1;
    string Code = 2;
}

message GetAllRequest{
  int64 page=1;
  int64 limit=2;
}

message GetAllResponse{
  repeated User users = 1 ;
}


message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string username = 4;
    string bio = 5;
    string website = 6;
    string email = 7;
    string password = 8;
    string created_at = 9;
    string updeted_at = 10;
    string deleted_at = 11;
}

message UserDetail {
	string FirstName = 1;
	string LastName = 2;
    string Username = 3;
    string Bio = 4;
    string Website = 5;
	string Email = 6;
	string Password = 7;
}

message CheckUniquenessRequest {
    string field = 1;
    string value = 2;
  }
  
  message CheckUniquenessResponse {
    bool result = 1;
  }